--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGOURL =mongodb://127.0.0.1:27017/users
+MONGOURL = mongodb+srv://charuleela:charu@mern2025.r0fr44k.mongodb.net/users
